--- a/s4.css
+++ b/s4.css
@@ -182,7 +182,7 @@
     border-top-right-radius: 100% 40%;
     background: rgba(255, 0, 0, 0.6);
     filter: blur(30px);
-    z-index: 1S;
+    z-index: 1;
 }
 
 .trend {
